--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-/* Styling untuk input saat autofill - khusus .input-form */
+/* Styling untuk input saat autofill - khusus .input-form
 .input-form:-webkit-autofill,
 .input-form:-webkit-autofill:hover,
 .input-form:-webkit-autofill:focus,
@@ -44,7 +44,7 @@ body {
   background-clip: content-box !important;
 }
 
-/* Responsif untuk .input-form */
+
 @media (min-width: 768px) {
   .input-form:-webkit-autofill,
   .input-form:-webkit-autofill:hover,
@@ -55,13 +55,13 @@ body {
   }
 }
 
-/* Styling saat fokus untuk autofill - khusus .input-form */
+
 .input-form:-webkit-autofill:focus {
   -webkit-box-shadow: 5.5px 7px 0 black, 0 0 0 1000px #FFFFFF inset !important;
   box-shadow: 5.5px 7px 0 black, 0 0 0 1000px #FFFFFF inset !important;
 }
 
-/* Firefox autofill - khusus .input-form */
+
 .input-form:-moz-autofill {
   background-color: #FFFFFF !important;
   color: #000 !important;
@@ -77,7 +77,7 @@ body {
     padding: 0.875rem !important;
     font-size: 1rem !important;
   }
-}
+} */
 
 /* Custom Input Styles */
 .input-form {
